# cloud-init-ext

./: Cargo.toml
migrations/: V1__add_users_table.sql  V2__add_registered_clients_table.sql
src/: error.rs  main.rs
src/endpoints/: cloud_init.rs  mod.rs
src/endpoints/crud/: mod.rs  registered_clients.rs
src/functionality/: ansible.rs  ip.rs  mod.rs
