[package]
name = "cloud-init-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-governor = "0.2.5"
serde_yaml = "0.8.21"

[dependencies.serde]
version = "1.0.130"
features = ['derive']

[dependencies.paperclip]
version = "0.6.1"
features = ["actix"]

[dependencies.mysql]
version = "21.0.2"
default-features = false

[dependencies.refinery]
version = "0.7.0"
features = ["mysql-notls"]

[patch.crates-io.mysql]
git = "https://github.com/TheDutchMC/rust-mysql-simple"

[patch.crates-io.refinery]
git = "https://github.com/TheDutchMC/refinery"

[patch.crates-io.refinery-core]
git = "https://github.com/TheDutchMC/refinery"